deploy: 820acd5d7f1b69cd18e14af3cd52930b6141ed8f

--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مخطط لاقتصاد أكثر أمانًا (Blueprint for a Safer Economy)</h1>
           
-            <p class="small-text">Last updated&nbsp;1:37 م الساعة 27 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;10:50 ص الساعة 28 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -206,7 +206,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*قد تخضع المقاطعات الصغيرة (تلك التي يقل عدد سكانها عن 106,000 نسمة) لتدابير بديلة لتقييم الحالات لأغراض تحديد الفئة.</br> **لا يتم تطبيق مقياس العدالة الصحية على المقاطعات الصغيرة. ولا يُستخدم مقياس العدالة الصحية إلا للانتقال إلى فئة أقل تقييدًا.</p>
-<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">تعيينات الفئات الحالية اعتبارًا من 24 نوفمبر 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">تعيينات الفئات الحالية اعتبارًا من 28 نوفمبر 2020</h3>
 
 
 
@@ -214,7 +214,7 @@
 
 
 
-<p class="small-text">تعتمد جميع البيانات وتعيينات الفئات على نتائج الأسبوع المنتهي في18 نوفمبر 2020. اطلع على كيفية تعيين الفئات وتغييرها، وكذلك البيانات التاريخية للمقاطعات (<strong>الرسم البياني لمخطط كاليفورنيا</strong>)، على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">مخطط إدارة الصحة العامة بولاية كاليفورنيا (CDPH) لإطار عمل أكثر أمانًا للاقتصاد</a>.</p>
+<p class="small-text">تعتمد جميع البيانات وتعيينات الفئات على نتائج الأسبوع المنتهي في22 نوفمبر 2020. اطلع على كيفية تعيين الفئات وتغييرها، وكذلك البيانات التاريخية للمقاطعات (<strong>الرسم البياني لمخطط كاليفورنيا</strong>)، على <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">مخطط إدارة الصحة العامة بولاية كاليفورنيا (CDPH) لإطار عمل أكثر أمانًا للاقتصاد</a>.</p>
 
 
 
