--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 27, 2020 sa 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 28, 2020 sa 10:50 AM</p>
           
         </div>
       </div>
@@ -206,7 +206,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Puwedeng mapailalim ang maliliit na county (na wala pang 106,000 ang populasyon) sa ibang pag-iingat para sa pagtatasa ng kaso para sa mga layunin ng pagtatalaga ng tier.</br> **Hindi inilalapat ang sukatan ng equity sa kalusugan sa maliliit na county. Ginagamit ang sukatan ng equity sa kalusugan para makausad sa mas maluwag na tier.</p>
-<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 24, 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 28, 2020</h3>
 
 
 
@@ -214,7 +214,7 @@
 
 
 
-<p class="small-text">Nakabatay ang lahat ng datos at pagtatalaga ng tier sa mga resulta mula sa linggong natapos noong Nobyembre 18, 2020. Tingnan kung paano itinatalaga at binabago ang mga tier, pati na rin ang mga dating datos ng county (<strong>Chart ng Datos ng Blueprint ng California o California Blueprint Data Chart</strong>), sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">framework ng Blueprint para sa Mas Ligtas na Ekonomiya ng CDPH</a>.</p>
+<p class="small-text">Nakabatay ang lahat ng datos at pagtatalaga ng tier sa mga resulta mula sa linggong natapos noong Nobyembre 22, 2020. Tingnan kung paano itinatalaga at binabago ang mga tier, pati na rin ang mga dating datos ng county (<strong>Chart ng Datos ng Blueprint ng California o California Blueprint Data Chart</strong>), sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">framework ng Blueprint para sa Mas Ligtas na Ekonomiya ng CDPH</a>.</p>
 
 
 
