--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;November 27, 2020 at 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;November 28, 2020 at 10:50 AM</p>
           
         </div>
       </div>
