--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;November 27, 2020 at 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;November 28, 2020 at 10:50 AM</p>
           
         </div>
       </div>
@@ -224,7 +224,7 @@
 
 
 
-<h3 class="has-text-align-center" id="county-status">Current tier assignments as of November 24, 2020</h3>
+<h3 class="has-text-align-center" id="county-status">Current tier assignments as of November 28, 2020</h3>
 
 
 
@@ -237,7 +237,7 @@
 
 
 
-<p class="small-text">All data and tier assignments are based on results from week ending November 18, 2020. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH&#8217;s Blueprint for a Safer Economy framework</a>.</p>
+<p class="small-text">All data and tier assignments are based on results from week ending November 22, 2020. See how tiers are assigned and change, as well as county historical data (<strong>California Blueprint Data Chart</strong>), at <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH&#8217;s Blueprint for a Safer Economy framework</a>.</p>
 
 
 
