--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 27, 2020 sa 1:37 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 28, 2020 sa 10:50 AM</p>
           
         </div>
       </div>
