--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;November 27, 2020 at 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;November 28, 2020 at 10:50 AM</p>
           
         </div>
       </div>
