--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月27日, 下午1:37</p>
+            <p class="small-text">Last updated&nbsp;2020年11月28日, 上午10:50</p>
           
         </div>
       </div>
