--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月27日, 下午1:37</p>
+            <p class="small-text">Last updated&nbsp;2020年11月28日, 上午10:50</p>
           
         </div>
       </div>
@@ -206,7 +206,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*可能會對小縣（人口少於106,000人的縣）採用其他病例評估措施，以進行等級劃分。</br>**健康公平指標不適用於小縣。健康公平指標是用於讓某縣移至限制性較低的等級。</p>
-<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 2020年11月24日</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 2020年11月28日</h3>
 
 
 
@@ -214,7 +214,7 @@
 
 
 
-<p class="small-text">所有數據和等級劃分的依據為2020年11月18日週末的結果。請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH發佈的更安全的經濟藍圖架構</a>，了解等級劃分及變更的方式，以及縣歷史數據（<strong>加州藍圖數據圖</strong>）。</p>
+<p class="small-text">所有數據和等級劃分的依據為2020年11月22日週末的結果。請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">CDPH發佈的更安全的經濟藍圖架構</a>，了解等級劃分及變更的方式，以及縣歷史數據（<strong>加州藍圖數據圖</strong>）。</p>
 
 
 
