--- a/ko/data-and-tools/index.html
+++ b/ko/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>데이터 및 도구</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 28일 오전 11:08</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 28일 오후 1:23</p>
           
         </div>
       </div>
