--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月28日, 上午11:08</p>
+            <p class="small-text">Last updated&nbsp;2020年11月28日, 下午1:23</p>
           
         </div>
       </div>
