deploy: a13b2b920b5dbae62ec135b4371b448925d6f19c

--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 28, 2020 sa 1:23 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 29, 2020 sa 9:42 AM</p>
           
         </div>
       </div>
