--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 28일 오후 1:23</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 29일 오전 9:42</p>
           
         </div>
       </div>
