--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Last updated&nbsp;29 de noviembre de 2020 a las 11:26 a. m.</p>
+            <p class="small-text">Last updated&nbsp;29 de noviembre de 2020 a las 12:25 p. m.</p>
           
         </div>
       </div>
