--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;November 29, 2020 at 11:26 AM</p>
+            <p class="small-text">Last updated&nbsp;November 29, 2020 at 12:25 PM</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-317.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--517ce9b0668bf704cb5fceb0f96b7b14 -->November 28, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-316.aspx" lang="en-US" hreflang="en-US">​State Officials Announce Latest COVID-19 Facts</a>
