--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 29, 2020 sa 11:26 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 29, 2020 sa 12:25 PM</p>
           
         </div>
       </div>
