--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:25 م الساعة 29 نوفمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:47 ص الساعة 30 نوفمبر 2020</p>
           
         </div>
       </div>
