--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;November 29, 2020 at 12:25 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:47 AM</p>
           
         </div>
       </div>
