--- a/food-resources/index.html
+++ b/food-resources/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Getting food</h1>
           
-            <p class="small-text">Last updated&nbsp;October 19, 2020 at 1:59 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:51 AM</p>
           
         </div>
       </div>
@@ -175,11 +175,11 @@
 
 
 
-<h2><strong>Emergency food and food benefits</strong></h2>
+<h2>Emergency food and food benefits</h2>
 
 
 
-<h3 class="js-qa-question"><strong>CalFresh food benefits</strong></h3>
+<h3 class="js-qa-question">CalFresh food benefits</h3>
 
 
 
@@ -195,7 +195,7 @@
 
 
 
-<h3 class="js-qa-question"><strong><strong>Food banks</strong></strong></h3>
+<h3 class="js-qa-question">Food banks</h3>
 
 
 
@@ -219,11 +219,11 @@
 
 
 
-<h2><strong>Families with school-aged children</strong></h2>
+<h2>Families with school-aged children</h2>
 
 
 
-<h3 class="js-qa-question"><strong>School meals and the ‘CA Meals for Kids’ app</strong></h3>
+<h3 class="js-qa-question">School meals and the ‘CA Meals for Kids’ app</h3>
 
 
 
@@ -239,7 +239,7 @@
 
 
 
-<h3 class="js-qa-question"><strong>Pandemic EBT (P-EBT)</strong></h3>
+<h3 class="js-qa-question">Pandemic EBT (P-EBT)</h3>
 
 
 
@@ -267,11 +267,11 @@
 
 
 
-<h2 id="older-adults"><strong>Older adults </strong></h2>
+<h2 id="older-adults">Older adults</h2>
 
 
 
-<h3 class="js-qa-answer"><strong>Great Plates Delivered: Home meals for seniors</strong> </h3>
+<h3 class="js-qa-answer">Great Plates Delivered: Home meals for seniors</h3>
 
 
 
@@ -279,7 +279,7 @@
 
 
 
-<h3><strong><strong>Home-delivered meals</strong></strong> for older adults</h3>
+<h3>Home-delivered meals for older adults</h3>
 
 
 
@@ -299,7 +299,7 @@
 
 
 
-<h3><strong>Food bank food for older adults</strong></h3>
+<h3>Food bank food for older adults</h3>
 
 
 
@@ -307,7 +307,7 @@
 
 
 
-<h3><strong>Statewide COVID-19 information hotline</strong></h3>
+<h3>Statewide COVID-19 information hotline</h3>
 
 
 
@@ -327,7 +327,7 @@
 
 
 
-<h3><strong>211</strong></h3>
+<h3>211</h3>
 
 
 
@@ -339,7 +339,7 @@
 
 
 
-<h3><strong>Connect2Affect</strong></h3>
+<h3>Connect2Affect</h3>
 
 
 
@@ -351,7 +351,7 @@
 
 
 
-<h3><strong>Eldercare Locator</strong></h3>
+<h3>Eldercare Locator</h3>
 
 
 
@@ -359,7 +359,7 @@
 
 
 
-<h3><strong>GoGoGrandparent</strong></h3>
+<h3>GoGoGrandparent</h3>
 
 
 
@@ -375,11 +375,11 @@
 
 
 
-<h2><strong>Grocery delivery options</strong></h2>
+<h2>Grocery delivery options</h2>
 
 
 
-<h3><strong>Walmart grocery delivery service&nbsp;</strong></h3>
+<h3>Walmart grocery delivery service </h3>
 
 
 
@@ -387,7 +387,7 @@
 
 
 
-<h3><strong>Target same day delivery</strong></h3>
+<h3>Target same day delivery</h3>
 
 
 
@@ -395,7 +395,7 @@
 
 
 
-<h3><strong>Safeway</strong></h3>
+<h3>Safeway</h3>
 
 
 
@@ -403,7 +403,7 @@
 
 
 
-<h3><strong>TaskRabbit</strong></h3>
+<h3>TaskRabbit</h3>
 
 
 
@@ -415,7 +415,7 @@
 
 
 
-<h2><strong>How you can help</strong></h2>
+<h2>How you can help</h2>
 
 
 
