deploy: 92681bec7d3eb383a762e8eebf0d81ae8233b195

--- a/workers/index.html
+++ b/workers/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Workers</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:47 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:55 AM</p>
           
         </div>
       </div>
@@ -303,7 +303,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Am I allowed to work during the outbreak?</strong></h4>
+<h4>Am I allowed to work during the outbreak?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -331,7 +331,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What can I do if my work hours are reduced <strong>or I am furloughed</strong></strong> <strong>because of COVID-19?</strong></h4>
+<h4>What can I do if my work hours are reduced or I am furloughed because of COVID-19?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -354,7 +354,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Do I need a note or certificate from a medical provider to file for unemployment?</strong></h4>
+<h4>Do I need a note or certificate from a medical provider to file for unemployment?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -377,7 +377,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>How long will it take to process a claim for unemployment or insurance benefits and to receive a payment?</strong></h4>
+<h4>How long will it take to process a claim for unemployment or insurance benefits and to receive a payment?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -405,7 +405,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>Can I file a workplace safety complaint?</strong></h4>
+<h4>Can I file a workplace safety complaint?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -428,7 +428,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What can I do if I miss work because of school closures?&nbsp;</strong></h4>
+<h4>What can I do if I miss work because of school closures? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -451,7 +451,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What if I can’t work because I’m taking care of someone who’s sick or quarantined?&nbsp;</strong></h4>
+<h4>What if I can’t work because I’m taking care of someone who’s sick or quarantined? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -489,7 +489,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What can I do if I can’t work because I’m sick or quarantined due to COVID-19?</strong></h4>
+<h4>What can I do if I can’t work because I’m sick or quarantined due to COVID-19?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -532,7 +532,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>What if I don’t have any available sick leave to use?&nbsp;</strong></h4>
+<h4>What if I don’t have any available sick leave to use? </h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -560,7 +560,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong>When can I return to work once my isolation or quarantine is over?</strong></h4>
+<h4>When can I return to work once my isolation or quarantine is over?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
