deploy: f3cc900ecd7affec3778bbd6ff3e41898eafa5a0

--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:48 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:57 AM</p>
           
         </div>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-<h4 class="js-qa-exclude">Program eligibility</h4>
+<h2 class="js-qa-exclude">Program eligibility</h2>
 
 
 
@@ -187,7 +187,7 @@
 
 
 
-<h4 class="js-qa-exclude">How to reserve a room</h4>
+<h2 class="js-qa-exclude">How to reserve a room</h2>
 
 
 
@@ -195,7 +195,7 @@
 
 
 
-<h4 class="js-qa-exclude">Program details</h4>
+<h2 class="js-qa-exclude">Program details</h2>
 
 
 
@@ -215,7 +215,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4><strong><strong>Can routine travel for healthcare staff be covered under the “Hotel rooms for healthcare workers” program?</strong></strong></h4>
+<h4>Can routine travel for healthcare staff be covered under the “Hotel rooms for healthcare workers” program?</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
