--- a/telehealth/index.html
+++ b/telehealth/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Getting health care from home through telehealth</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:50 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 9:59 AM</p>
           
         </div>
       </div>
@@ -223,7 +223,7 @@
 
 
 
-<h2><strong>What to do if you have trouble getting telehealth</strong></h2>
+<h2>What to do if you have trouble getting telehealth</h2>
 
 
 
@@ -235,7 +235,7 @@
 
 
 
-<h2><strong>Look up telehealth or nurse advice line options offered by your health plan here</strong>.</h2>
+<h2>Look up telehealth or nurse advice line options offered by your health plan here</h2>
 
 
 
