Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary">New limited stay at home order</h2>
+<h2 class="h3 text-primary">Immediate relief fund for businesses</h2>
 
 
 
-<p>COVID-19 is increasing at alarming rates in California and we all need to do our part to stop the surge. Effective November 21, stop non-essential activities between 10:00 pm to 5:00 am in counties in the Widespread (purple) tier.</p>
+<p>California is providing new relief for businesses including tax deferrals, an emergency relief package, and an increased California Rebuilding Fund. Check back here to find out when you can sign up.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Read the order</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/business-and-employers/">Learn more about the resources available</a></p>
