--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제를 위한 청사진</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 30일 오전 11:21</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 30일 오후 12:37</p>
           
         </div>
       </div>
