--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -257,7 +257,7 @@ addtositemap: false
   <div class="d-flex justify-content-center">
     <button class="small-tab active" data-key="cases">Cases</button>
     <button class="small-tab" data-key="deaths">Deaths</button>
-    <button class="small-tab" data-key="tests">Testing</button>
+    <button class="small-tab" data-key="testing">Testing</button>
   </div>
 </cagov-chart-filter-buttons>
 
@@ -267,12 +267,15 @@ addtositemap: false
       <cagov-chart-re-pop class="chart d-none">
         <ul>
           <li data-label="chartTitle--cases">Cases relative to percentage of population in placeholderForDynamicLocation</li>
-          <li data-label="chartTitl--deaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--deaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
           <li data-label="chartTitle--testing">Testing relative to percentage of population in placeholderForDynamicLocation</li>
           <li data-label="chartDescription--cases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartDescription--testing">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartLineDiff">change since previous month</li>
+          <li data-label="chartLegend2--cases">of state population</li>
+          <li data-label="chartLegend2--deaths">of state population</li>
+          <li data-label="chartLegend2--testing">of state population</li>
         </ul></cagov-chart-re-pop>
     </div>
     <div class="col">
