Translation legend fixes.

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -273,6 +273,12 @@ addtositemap: false
           <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartDescription--testing">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartLineDiff">change since previous month</li>
+          <li data-label="chartLegend1County--cases">of cases in county</li>
+          <li data-label="chartLegend1County--deaths">of deaths in county</li>
+          <li data-label="chartLegend1County--testing">of testing in county</li>
+          <li data-label="chartLegend1State--cases">of cases statewide</li>
+          <li data-label="chartLegend1State--deaths">of deaths statewide</li>
+          <li data-label="chartLegend1State--testing">of testing statewide</li>
           <li data-label="chartLegend2--cases">of state population</li>
           <li data-label="chartLegend2--deaths">of state population</li>
           <li data-label="chartLegend2--testing">of state population</li>
