--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 11, 2020 lúc 14:23</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 11, 2020 lúc 14:57</p>
           
         </div>
       </div>
@@ -173,6 +173,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-318.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--3ef353a8b79c3106a43e4e38b9ef06ae -->November 29, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-317.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
