--- a/src/js/equity-dash/charts/relative-percentage-by-pop/snippet.html
+++ b/src/js/equity-dash/charts/relative-percentage-by-pop/snippet.html
@@ -7,6 +7,7 @@
     <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
     <li data-label="chartDescription--tests">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
     <li data-label="chartLineDiff">change since previous month</li>
+    <li data-label="relative-percentage-state-population">% of state population</li>
     <li data-label="relative-percentage-statewide">% of cases statewide</li>
     <li data-label="relative-percentage-county">% of cases in county</li>
     <li data-label="county-label">County</li>
