--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 5:31 PM</p>
+            <p class="small-text">Last updated&nbsp;November 30, 2020 at 3:24 PM</p>
           
         </div>
       </div>
@@ -411,6 +411,10 @@
 
 
 
+
+
+
+<div style="display:none;" class="js-qa js-qa-answer"><!-- curfew --></div>
 
 
 
