--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -257,7 +257,7 @@ addtositemap: false
   <div class="d-flex justify-content-center">
     <button class="small-tab active" data-key="cases">Cases</button>
     <button class="small-tab" data-key="deaths">Deaths</button>
-    <button class="small-tab" data-key="testing">Testing</button>
+    <button class="small-tab" data-key="tests">Testing</button>
   </div>
 </cagov-chart-filter-buttons>
 
@@ -268,20 +268,20 @@ addtositemap: false
         <ul>
           <li data-label="chartTitle--cases">Cases relative to percentage of population in placeholderForDynamicLocation</li>
           <li data-label="chartTitle--deaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
-          <li data-label="chartTitle--testing">Testing relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--tests">Testing relative to percentage of population in placeholderForDynamicLocation</li>
           <li data-label="chartDescription--cases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
-          <li data-label="chartDescription--testing">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartDescription--tests">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
           <li data-label="chartLineDiff">change since previous month</li>
           <li data-label="chartLegend1County--cases">of cases in county</li>
           <li data-label="chartLegend1County--deaths">of deaths in county</li>
-          <li data-label="chartLegend1County--testing">of testing in county</li>
+          <li data-label="chartLegend1County--tests">of testing in county</li>
           <li data-label="chartLegend1State--cases">of cases statewide</li>
           <li data-label="chartLegend1State--deaths">of deaths statewide</li>
-          <li data-label="chartLegend1State--testing">of testing statewide</li>
+          <li data-label="chartLegend1State--tests">of testing statewide</li>
           <li data-label="chartLegend2--cases">of state population</li>
           <li data-label="chartLegend2--deaths">of state population</li>
-          <li data-label="chartLegend2--testing">of state population</li>
+          <li data-label="chartLegend2--tests">of state population</li>
         </ul></cagov-chart-re-pop>
     </div>
     <div class="col">
@@ -289,11 +289,20 @@ addtositemap: false
 <ul>
           <li data-label="chartTitle--cases">Cases rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
           <li data-label="chartTitle--deaths">Deaths rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
-          <li data-label="chartTitle--testing">Testing rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--tests">Testing rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
           <li data-label="chartDescription--cases">Compare cases adjusted by population size across each race and ethnicity.</li>
           <li data-label="chartDescription--deaths">Compare deaths adjusted by population size across each race and ethnicity.</li>
-          <li data-label="chartDescription--testing">Compare tests adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartDescription--tests">Compare tests adjusted by population size across each race and ethnicity.</li>
           <li data-label="chartLineDiff">change since previous month</li>
+          <li data-label="chartLegend--cases">Cases per 100k people</li>
+          <li data-label="chartLegend--deaths">Deaths per 100k people</li>
+          <li data-label="chartLegend--tests">Tests per 100k people</li>
+          <li data-label="chartFilterLegendPfxCounty--cases">placeholderForDynamicLocation cases per 100k: </li>
+          <li data-label="chartFilterLegendPfxCounty--deaths">placeholderForDynamicLocation deaths per 100k: </li>
+          <li data-label="chartFilterLegendPfxCounty--tests">placeholderForDynamicLocation tests per 100k: </li>
+          <li data-label="chartFilterLegendPfxState--cases">Statewide cases per 100k: </li>
+          <li data-label="chartFilterLegendPfxState--deaths">Statewide deaths per 100k: </li>
+          <li data-label="chartFilterLegendPfxState--tests">Statewide tests per 100k: </li>
         </ul></cagov-chart-re-100k>
     </div>
   </div>
